--- a/3rdparty/runtime/zserio_apidoc/_modules/zserio/bitreader.html
+++ b/3rdparty/runtime/zserio_apidoc/_modules/zserio/bitreader.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>zserio.bitreader &#8212; Zserio 1.2.0-pre1 documentation</title>
+    <title>zserio.bitreader &#8212; Zserio 1.2.0 documentation</title>
     <link rel="stylesheet" href="../../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="../../_static/graphviz.css" />
@@ -28,7 +28,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">Zserio 1.2.0-pre1 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">Zserio 1.2.0 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li> 
       </ul>
     </div>  
@@ -531,7 +531,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">Zserio 1.2.0-pre1 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">Zserio 1.2.0 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li> 
       </ul>
     </div>
