--- a/3rdparty/runtime/zserio_apidoc/index.html
+++ b/3rdparty/runtime/zserio_apidoc/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Zserio Python runtime library documentation &#8212; Zserio 1.2.0-pre1 documentation</title>
+    <title>Zserio Python runtime library documentation &#8212; Zserio 1.2.0 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="_static/graphviz.css" />
@@ -32,7 +32,7 @@
         <li class="right" >
           <a href="api/zserio.BitStreamReader.html" title="BitStreamReader"
              accesskey="N">next</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">Zserio 1.2.0-pre1 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="#">Zserio 1.2.0 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -338,7 +338,7 @@
         <li class="right" >
           <a href="api/zserio.BitStreamReader.html" title="BitStreamReader"
              >next</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">Zserio 1.2.0-pre1 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="#">Zserio 1.2.0 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
