--- a/3rdparty/runtime/zserio_apidoc/_modules/index.html
+++ b/3rdparty/runtime/zserio_apidoc/_modules/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Overview: module code &#8212; Zserio 1.4.0 documentation</title>
+    <title>Overview: module code &#8212; Zserio 2.0.0 documentation</title>
     <link rel="stylesheet" href="../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="../_static/graphviz.css" />
@@ -27,7 +27,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">Zserio 1.4.0 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">Zserio 2.0.0 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -38,6 +38,8 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="zserio/array.html">zserio.array</a></li>
+<li><a href="zserio/bitbuffer.html">zserio.bitbuffer</a></li>
+<li><a href="zserio/bitposition.html">zserio.bitposition</a></li>
 <li><a href="zserio/bitreader.html">zserio.bitreader</a></li>
 <li><a href="zserio/bitsizeof.html">zserio.bitsizeof</a></li>
 <li><a href="zserio/bitwriter.html">zserio.bitwriter</a></li>
@@ -45,6 +47,8 @@
 <li><a href="zserio/exception.html">zserio.exception</a></li>
 <li><a href="zserio/float.html">zserio.float</a></li>
 <li><a href="zserio/hashcode.html">zserio.hashcode</a></li>
+<li><a href="zserio/pubsub.html">zserio.pubsub</a></li>
+<li><a href="zserio/service.html">zserio.service</a></li>
 </ul>
 
           </div>
@@ -78,7 +82,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">Zserio 1.4.0 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">Zserio 2.0.0 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
