--- a/3rdparty/runtime/zserio_apidoc/genindex.html
+++ b/3rdparty/runtime/zserio_apidoc/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; Zserio 1.4.0 documentation</title>
+    <title>Index &#8212; Zserio 2.0.0 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="_static/graphviz.css" />
@@ -28,7 +28,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">Zserio 1.4.0 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">Zserio 2.0.0 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -53,6 +53,7 @@
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  | <a href="#Z"><strong>Z</strong></a>
@@ -61,9 +62,11 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader.alignTo">alignTo() (zserio.BitStreamReader method)</a>
+      <li><a href="api/zserio.bitposition.alignTo.html#zserio.bitposition.alignTo">alignTo() (in module zserio.bitposition)</a>
 
       <ul>
+        <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader.alignTo">(zserio.BitStreamReader method)</a>
+</li>
         <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter.alignTo">(zserio.BitStreamWriter method)</a>
 </li>
       </ul></li>
@@ -77,6 +80,8 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/zserio.BitBuffer.html#zserio.BitBuffer">BitBuffer (class in zserio)</a>
+</li>
       <li><a href="api/zserio.array.BitBufferArrayTraits.html#zserio.array.BitBufferArrayTraits">BitBufferArrayTraits (class in zserio.array)</a>
 </li>
       <li><a href="api/zserio.array.BitFieldArrayTraits.html#zserio.array.BitFieldArrayTraits">BitFieldArrayTraits (class in zserio.array)</a>
@@ -110,6 +115,8 @@
 </li>
         <li><a href="api/zserio.array.VarIntArrayTraits.html#zserio.array.VarIntArrayTraits.bitSizeOf">(zserio.array.VarIntArrayTraits static method)</a>
 </li>
+        <li><a href="api/zserio.array.VarSizeArrayTraits.html#zserio.array.VarSizeArrayTraits.bitSizeOf">(zserio.array.VarSizeArrayTraits static method)</a>
+</li>
         <li><a href="api/zserio.array.VarUInt16ArrayTraits.html#zserio.array.VarUInt16ArrayTraits.bitSizeOf">(zserio.array.VarUInt16ArrayTraits static method)</a>
 </li>
         <li><a href="api/zserio.array.VarUInt32ArrayTraits.html#zserio.array.VarUInt32ArrayTraits.bitSizeOf">(zserio.array.VarUInt32ArrayTraits static method)</a>
@@ -121,11 +128,15 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/zserio.bitposition.bitsToBytes.html#zserio.bitposition.bitsToBytes">bitsToBytes() (in module zserio.bitposition)</a>
+</li>
       <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader">BitStreamReader (class in zserio)</a>
 </li>
       <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter">BitStreamWriter (class in zserio)</a>
 </li>
       <li><a href="api/zserio.array.BoolArrayTraits.html#zserio.array.BoolArrayTraits">BoolArrayTraits (class in zserio.array)</a>
+</li>
+      <li><a href="api/zserio.bitposition.bytesToBits.html#zserio.bitposition.bytesToBits">bytesToBits() (in module zserio.bitposition)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -134,6 +145,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/zserio.hashcode.calcHashCode.html#zserio.hashcode.calcHashCode">calcHashCode() (in module zserio.hashcode)</a>
+</li>
+      <li><a href="api/zserio.ServiceInterface.html#zserio.ServiceInterface.callMethod">callMethod() (zserio.ServiceInterface method)</a>
 </li>
       <li><a href="api/zserio.float.convertFloatToUInt16.html#zserio.float.convertFloatToUInt16">convertFloatToUInt16() (in module zserio.float)</a>
 </li>
@@ -181,6 +194,8 @@
         <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter.getBitPosition">(zserio.BitStreamWriter method)</a>
 </li>
       </ul></li>
+      <li><a href="api/zserio.BitBuffer.html#zserio.BitBuffer.getBitSize">getBitSize() (zserio.BitBuffer method)</a>
+</li>
       <li><a href="api/zserio.bitsizeof.getBitSizeOfBitBuffer.html#zserio.bitsizeof.getBitSizeOfBitBuffer">getBitSizeOfBitBuffer() (in module zserio.bitsizeof)</a>
 </li>
       <li><a href="api/zserio.bitsizeof.getBitSizeOfString.html#zserio.bitsizeof.getBitSizeOfString">getBitSizeOfString() (in module zserio.bitsizeof)</a>
@@ -191,10 +206,12 @@
 </li>
       <li><a href="api/zserio.bitsizeof.getBitSizeOfVarInt32.html#zserio.bitsizeof.getBitSizeOfVarInt32">getBitSizeOfVarInt32() (in module zserio.bitsizeof)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/zserio.bitsizeof.getBitSizeOfVarInt64.html#zserio.bitsizeof.getBitSizeOfVarInt64">getBitSizeOfVarInt64() (in module zserio.bitsizeof)</a>
 </li>
+      <li><a href="api/zserio.bitsizeof.getBitSizeOfVarSize.html#zserio.bitsizeof.getBitSizeOfVarSize">getBitSizeOfVarSize() (in module zserio.bitsizeof)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/zserio.bitsizeof.getBitSizeOfVarUInt.html#zserio.bitsizeof.getBitSizeOfVarUInt">getBitSizeOfVarUInt() (in module zserio.bitsizeof)</a>
 </li>
       <li><a href="api/zserio.bitsizeof.getBitSizeOfVarUInt16.html#zserio.bitsizeof.getBitSizeOfVarUInt16">getBitSizeOfVarUInt16() (in module zserio.bitsizeof)</a>
@@ -203,7 +220,13 @@
 </li>
       <li><a href="api/zserio.bitsizeof.getBitSizeOfVarUInt64.html#zserio.bitsizeof.getBitSizeOfVarUInt64">getBitSizeOfVarUInt64() (in module zserio.bitsizeof)</a>
 </li>
+      <li><a href="api/zserio.BitBuffer.html#zserio.BitBuffer.getBuffer">getBuffer() (zserio.BitBuffer method)</a>
+</li>
+      <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader.getBufferBitSize">getBufferBitSize() (zserio.BitStreamReader method)</a>
+</li>
       <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter.getByteArray">getByteArray() (zserio.BitStreamWriter method)</a>
+</li>
+      <li><a href="api/zserio.BitBuffer.html#zserio.BitBuffer.getByteSize">getByteSize() (zserio.BitBuffer method)</a>
 </li>
       <li><a href="api/zserio.builtin.getNumBits.html#zserio.builtin.getNumBits">getNumBits() (in module zserio.builtin)</a>
 </li>
@@ -241,6 +264,8 @@
         <li><a href="api/zserio.array.VarInt64ArrayTraits.html#zserio.array.VarInt64ArrayTraits.HAS_BITSIZEOF_CONSTANT">(zserio.array.VarInt64ArrayTraits attribute)</a>
 </li>
         <li><a href="api/zserio.array.VarIntArrayTraits.html#zserio.array.VarIntArrayTraits.HAS_BITSIZEOF_CONSTANT">(zserio.array.VarIntArrayTraits attribute)</a>
+</li>
+        <li><a href="api/zserio.array.VarSizeArrayTraits.html#zserio.array.VarSizeArrayTraits.HAS_BITSIZEOF_CONSTANT">(zserio.array.VarSizeArrayTraits attribute)</a>
 </li>
         <li><a href="api/zserio.array.VarUInt16ArrayTraits.html#zserio.array.VarUInt16ArrayTraits.HAS_BITSIZEOF_CONSTANT">(zserio.array.VarUInt16ArrayTraits attribute)</a>
 </li>
@@ -286,6 +311,8 @@
 </li>
         <li><a href="api/zserio.array.VarIntArrayTraits.html#zserio.array.VarIntArrayTraits.initializeOffsets">(zserio.array.VarIntArrayTraits static method)</a>
 </li>
+        <li><a href="api/zserio.array.VarSizeArrayTraits.html#zserio.array.VarSizeArrayTraits.initializeOffsets">(zserio.array.VarSizeArrayTraits static method)</a>
+</li>
         <li><a href="api/zserio.array.VarUInt16ArrayTraits.html#zserio.array.VarUInt16ArrayTraits.initializeOffsets">(zserio.array.VarUInt16ArrayTraits static method)</a>
 </li>
         <li><a href="api/zserio.array.VarUInt32ArrayTraits.html#zserio.array.VarUInt32ArrayTraits.initializeOffsets">(zserio.array.VarUInt32ArrayTraits static method)</a>
@@ -309,6 +336,14 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/zserio.PubsubInterface.html#zserio.PubsubInterface.publish">publish() (zserio.PubsubInterface method)</a>
+</li>
+      <li><a href="api/zserio.PubsubException.html#zserio.PubsubException">PubsubException</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/zserio.PubsubInterface.html#zserio.PubsubInterface">PubsubInterface (class in zserio)</a>
+</li>
       <li><a href="api/zserio.PythonRuntimeException.html#zserio.PythonRuntimeException">PythonRuntimeException</a>
 </li>
   </ul></td>
@@ -346,6 +381,8 @@
 </li>
         <li><a href="api/zserio.array.VarIntArrayTraits.html#zserio.array.VarIntArrayTraits.read">(zserio.array.VarIntArrayTraits static method)</a>
 </li>
+        <li><a href="api/zserio.array.VarSizeArrayTraits.html#zserio.array.VarSizeArrayTraits.read">(zserio.array.VarSizeArrayTraits static method)</a>
+</li>
         <li><a href="api/zserio.array.VarUInt16ArrayTraits.html#zserio.array.VarUInt16ArrayTraits.read">(zserio.array.VarUInt16ArrayTraits static method)</a>
 </li>
         <li><a href="api/zserio.array.VarUInt32ArrayTraits.html#zserio.array.VarUInt32ArrayTraits.read">(zserio.array.VarUInt32ArrayTraits static method)</a>
@@ -381,6 +418,8 @@
 </li>
       <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader.readVarInt64">readVarInt64() (zserio.BitStreamReader method)</a>
 </li>
+      <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader.readVarSize">readVarSize() (zserio.BitStreamReader method)</a>
+</li>
       <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader.readVarUInt">readVarUInt() (zserio.BitStreamReader method)</a>
 </li>
       <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader.readVarUInt16">readVarUInt16() (zserio.BitStreamReader method)</a>
@@ -395,6 +434,10 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/zserio.ServiceException.html#zserio.ServiceException">ServiceException</a>
+</li>
+      <li><a href="api/zserio.ServiceInterface.html#zserio.ServiceInterface">ServiceInterface (class in zserio)</a>
+</li>
       <li><a href="api/zserio.BitStreamReader.html#zserio.BitStreamReader.setBitPosition">setBitPosition() (zserio.BitStreamReader method)</a>
 </li>
   </ul></td>
@@ -403,6 +446,8 @@
 </li>
       <li><a href="api/zserio.array.StringArrayTraits.html#zserio.array.StringArrayTraits">StringArrayTraits (class in zserio.array)</a>
 </li>
+      <li><a href="api/zserio.PubsubInterface.html#zserio.PubsubInterface.subscribe">subscribe() (zserio.PubsubInterface method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -410,6 +455,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter.toFile">toFile() (zserio.BitStreamWriter method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/zserio.PubsubInterface.html#zserio.PubsubInterface.unsubscribe">unsubscribe() (zserio.PubsubInterface method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -424,6 +477,8 @@
       <li><a href="api/zserio.array.VarInt64ArrayTraits.html#zserio.array.VarInt64ArrayTraits">VarInt64ArrayTraits (class in zserio.array)</a>
 </li>
       <li><a href="api/zserio.array.VarIntArrayTraits.html#zserio.array.VarIntArrayTraits">VarIntArrayTraits (class in zserio.array)</a>
+</li>
+      <li><a href="api/zserio.array.VarSizeArrayTraits.html#zserio.array.VarSizeArrayTraits">VarSizeArrayTraits (class in zserio.array)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -472,6 +527,8 @@
 </li>
         <li><a href="api/zserio.array.VarIntArrayTraits.html#zserio.array.VarIntArrayTraits.write">(zserio.array.VarIntArrayTraits static method)</a>
 </li>
+        <li><a href="api/zserio.array.VarSizeArrayTraits.html#zserio.array.VarSizeArrayTraits.write">(zserio.array.VarSizeArrayTraits static method)</a>
+</li>
         <li><a href="api/zserio.array.VarUInt16ArrayTraits.html#zserio.array.VarUInt16ArrayTraits.write">(zserio.array.VarUInt16ArrayTraits static method)</a>
 </li>
         <li><a href="api/zserio.array.VarUInt32ArrayTraits.html#zserio.array.VarUInt32ArrayTraits.write">(zserio.array.VarUInt32ArrayTraits static method)</a>
@@ -507,6 +564,8 @@
 </li>
       <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter.writeVarInt64">writeVarInt64() (zserio.BitStreamWriter method)</a>
 </li>
+      <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter.writeVarSize">writeVarSize() (zserio.BitStreamWriter method)</a>
+</li>
       <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter.writeVarUInt">writeVarUInt() (zserio.BitStreamWriter method)</a>
 </li>
       <li><a href="api/zserio.BitStreamWriter.html#zserio.BitStreamWriter.writeVarUInt16">writeVarUInt16() (zserio.BitStreamWriter method)</a>
@@ -525,6 +584,8 @@
 </li>
       <li><a href="index.html#module-zserio.array">zserio.array (module)</a>
 </li>
+      <li><a href="index.html#module-zserio.bitposition">zserio.bitposition (module)</a>
+</li>
       <li><a href="index.html#module-zserio.bitsizeof">zserio.bitsizeof (module)</a>
 </li>
   </ul></td>
@@ -534,6 +595,8 @@
       <li><a href="index.html#module-zserio.float">zserio.float (module)</a>
 </li>
       <li><a href="index.html#module-zserio.hashcode">zserio.hashcode (module)</a>
+</li>
+      <li><a href="index.html#module-zserio.limits">zserio.limits (module)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -571,7 +634,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">Zserio 1.4.0 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">Zserio 2.0.0 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
